--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -148,23 +148,20 @@ function getAvailableVoice(lang) {
 function speak(text, rate = 0.8, lang = "en-US") {
     if (!voicesLoaded) {
         console.warn("Vozes ainda não carregadas. Tentando novamente.");
-        window.speechSynthesis.onvoiceschanged = () => speak(text, rate, lang); // Rechama a função assim que as vozes carregarem
+        window.speechSynthesis.onvoiceschanged = () => speak(text, rate, lang);
         return;
     }
 
     const synth = window.speechSynthesis;
     const availableVoice = getAvailableVoice(lang);
 
-    // Verifica se a voz `en-US` está disponível
     if (availableVoice.lang !== lang && !hasWarnedUserAboutLang) {
-        alert(
-            `The English (US) language pack is not installed or available on your device. Please install it for the best experience. Defaulting to ${availableVoice.lang}.`
-        );
-        hasWarnedUserAboutLang = true; // Garante que a mensagem aparece apenas uma vez
+        alert(`The English (US) language pack is not installed or available on your device. Please install it for the best experience. Defaulting to ${availableVoice.lang}.`);
+        hasWarnedUserAboutLang = true;
     }
 
     const utterance = new SpeechSynthesisUtterance(text);
-    utterance.lang = availableVoice.lang; // Usa o idioma encontrado
+    utterance.lang = availableVoice.lang;
     utterance.voice = availableVoice;
     utterance.rate = rate;
 
@@ -172,11 +169,13 @@ function speak(text, rate = 0.8, lang = "en-US") {
         console.log(`Speaking with voice: ${availableVoice.name} (${availableVoice.lang})`);
         speakButton.disabled = true;
         speakButton.innerText = "Robot is speaking...";
+        robotImg.src = ROBOT_GIF; // Alterna para a imagem do GIF
     };
 
     utterance.onend = () => {
         speakButton.disabled = false;
         speakButton.innerText = "Press to Speak";
+        robotImg.src = ROBOT_STATIC; // Restaura a imagem estática
     };
 
     synth.speak(utterance);
