--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -95,33 +95,26 @@
         let isSpeaking = false;
         let staticTime = 0;
         let alternateTimeout;
+        let gifInterval;
         let userId = null;
         let chatHistory = [];
 
         // Botão de voltar
         backButton.addEventListener("click", () => window.history.back());
-
-        // Alternar imagem após 20 segundos de inatividade
-        function startStaticImageTimer() {
-            setInterval(() => {
-                if (!isSpeaking) {
-                    staticTime++;
-                    if (staticTime === 20) {
-                        robotImg.src = ROBOT_ALTERNATE;
-                        alternateTimeout = setTimeout(() => {
-                            robotImg.src = ROBOT_STATIC;
-                            staticTime = 0;
-                        }, 15000);
-                    }
-                }
-            }, 1000);
+        
+     function startStaticImageTimer() {
+    // Monitora o tempo de inatividade
+    gifInterval = setInterval(() => {
+        staticTime++;
+        if (staticTime === 30) { // Após 30 segundos de inatividade
+            robotImg.src = ROBOT_ALTERNATE; // Exibe o GIF alternativo
+            alternateTimeout = setTimeout(() => {
+                robotImg.src = ROBOT_STATIC; // Volta para a imagem estática após 15 segundos
+                staticTime = 0; // Reseta o contador
+            }, 15000); // Tempo para exibir o GIF alternativo
         }
-
-        function resetStaticTimer() {
-            staticTime = 0;
-            clearTimeout(alternateTimeout);
-            robotImg.src = ROBOT_STATIC;
-        }
+    }, 1000); // Incrementa o contador a cada segundo
+}
 
        let hasWarnedUserAboutLang = false; // Variável para evitar mensagens repetidas
 let voicesLoaded = false; // Variável para controlar se as vozes foram carregadas
@@ -169,13 +162,14 @@ function speak(text, rate = 0.8, lang = "en-US") {
         console.log(`Speaking with voice: ${availableVoice.name} (${availableVoice.lang})`);
         speakButton.disabled = true;
         speakButton.innerText = "Robot is speaking...";
-        robotImg.src = ROBOT_GIF; // Alterna para a imagem do GIF
+        robotImg.src = ROBOT_GIF; // Exibe o GIF do robô falando
+        resetStaticTimer(); // Reseta o temporizador de inatividade
     };
 
     utterance.onend = () => {
         speakButton.disabled = false;
         speakButton.innerText = "Press to Speak";
-        robotImg.src = ROBOT_STATIC; // Restaura a imagem estática
+        robotImg.src = ROBOT_STATIC; // Restaura a imagem estática após a fala
     };
 
     synth.speak(utterance);
@@ -299,7 +293,7 @@ document.addEventListener("visibilitychange", () => {
 window.onload = () => {
     setupSpeechRecognition(); // Configura o reconhecimento de voz
     initializeConversation(); // Inicializa a conversa
-    startStaticImageTimer(); // Inicia o timer de inatividade para troca de imagem
+    startStaticImageTimer(); // Inicia o temporizador para alternância de imagens
 };
     </script>
 </body>
