--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -103,7 +103,7 @@
         backButton.addEventListener("click", () => window.history.back());
         
      function startStaticImageTimer() {
-    // Monitora o tempo de inatividade
+    clearInterval(gifInterval); // Evita múltiplos intervalos
     gifInterval = setInterval(() => {
         staticTime++;
         if (staticTime === 30) { // Após 30 segundos de inatividade
@@ -114,6 +114,12 @@
             }, 15000); // Tempo para exibir o GIF alternativo
         }
     }, 1000); // Incrementa o contador a cada segundo
+}
+
+function resetStaticTimer() {
+    staticTime = 0; // Reseta o contador
+    clearTimeout(alternateTimeout); // Limpa o timeout alternativo
+    robotImg.src = ROBOT_STATIC; // Retorna à imagem estática
 }
 
        let hasWarnedUserAboutLang = false; // Variável para evitar mensagens repetidas
@@ -159,18 +165,20 @@ function speak(text, rate = 0.8, lang = "en-US") {
     utterance.rate = rate;
 
     utterance.onstart = () => {
-        console.log(`Speaking with voice: ${availableVoice.name} (${availableVoice.lang})`);
-        speakButton.disabled = true;
-        speakButton.innerText = "Robot is speaking...";
-        robotImg.src = ROBOT_GIF; // Exibe o GIF do robô falando
-        resetStaticTimer(); // Reseta o temporizador de inatividade
-    };
+    console.log(`Speaking with voice: ${availableVoice.name} (${availableVoice.lang})`);
+    speakButton.disabled = true;
+    speakButton.innerText = "Robot is speaking...";
+    robotImg.src = ROBOT_GIF; // Exibe o GIF do robô falando
+    clearInterval(gifInterval); // Pausa o temporizador de inatividade
+    resetStaticTimer(); // Reseta o temporizador
+};
 
-    utterance.onend = () => {
-        speakButton.disabled = false;
-        speakButton.innerText = "Press to Speak";
-        robotImg.src = ROBOT_STATIC; // Restaura a imagem estática após a fala
-    };
+utterance.onend = () => {
+    speakButton.disabled = false;
+    speakButton.innerText = "Press to Speak";
+    robotImg.src = ROBOT_STATIC; // Restaura a imagem estática após a fala
+    startStaticImageTimer(); // Reinicia o temporizador de inatividade
+};
 
     synth.speak(utterance);
 }
