--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -166,19 +166,22 @@ function speak(text, rate = 0.8, lang = "en-US") {
     utterance.rate = rate;
 
     utterance.onstart = () => {
-    console.log(`Speaking with voice: ${availableVoice.name} (${availableVoice.lang})`);
+    console.log("Iniciando fala do robô...");
     speakButton.disabled = true;
     speakButton.innerText = "Robot is speaking...";
     robotImg.src = ROBOT_GIF; // Exibe o GIF do robô falando
+    console.log("Imagem trocada para robo.gif.");
     clearInterval(gifInterval); // Pausa o temporizador de inatividade
     resetStaticTimer(); // Reseta o temporizador
 };
 
 utterance.onend = () => {
+    console.log("Fala do robô terminou.");
     speakButton.disabled = false;
     speakButton.innerText = "Press to Speak";
     robotImg.src = ROBOT_STATIC; // Restaura a imagem estática após a fala
-    if (!gifInterval) startStaticImageTimer(); // Garante que apenas um temporizador esteja ativo
+    console.log("Imagem trocada para robo1_static.png.");
+    startStaticImageTimer(); // Reinicia o temporizador de inatividade
 };
 
     synth.speak(utterance);
