--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -165,11 +165,11 @@ function speak(text, rate = 0.8, lang = "en-US") {
     utterance.voice = availableVoice;
     utterance.rate = rate;
 
-    utterance.onstart = () => {
+   utterance.onstart = () => {
     console.log("Iniciando fala do robô...");
     speakButton.disabled = true;
     speakButton.innerText = "Robot is speaking...";
-    robotImg.src = ROBOT_GIF; // Exibe o GIF do robô falando
+    robotImg.src = `${ROBOT_GIF}?timestamp=${new Date().getTime()}`; // Força o recarregamento
     console.log("Imagem trocada para robo.gif.");
     clearInterval(gifInterval); // Pausa o temporizador de inatividade
     resetStaticTimer(); // Reseta o temporizador
@@ -179,9 +179,16 @@ utterance.onend = () => {
     console.log("Fala do robô terminou.");
     speakButton.disabled = false;
     speakButton.innerText = "Press to Speak";
-    robotImg.src = ROBOT_STATIC; // Restaura a imagem estática após a fala
+    robotImg.src = `${ROBOT_STATIC}?timestamp=${new Date().getTime()}`; // Força o recarregamento
     console.log("Imagem trocada para robo1_static.png.");
     startStaticImageTimer(); // Reinicia o temporizador de inatividade
+};
+
+robotImg.onload = () => {
+    console.log("Imagem carregada com sucesso:", robotImg.src);
+};
+robotImg.onerror = () => {
+    console.error("Erro ao carregar a imagem:", robotImg.src);
 };
 
     synth.speak(utterance);
