--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -168,30 +168,36 @@ function speak(text, rate = 0.8, lang = "en-US") {
     utterance.voice = availableVoice;
     utterance.rate = rate;
 
-    // Evento quando o sintetizador começa a falar
-    utterance.onstart = () => {
-        console.log(`Speaking with voice: ${availableVoice.name} (${availableVoice.lang})`);
-        setRobotImage(ROBOT_GIF); // Alterna para o gif principal
-        speakButton.disabled = true;
-        speakButton.innerText = "Robot is speaking...";
-        isSpeaking = true; // Indica que o robô está falando
-        resetStaticTimer(); // Reseta o timer de inatividade
-    };
+  // Evento quando o sintetizador começa a falar
+utterance.onstart = () => {
+    console.log(`Speaking with voice: ${availableVoice.name} (${availableVoice.lang})`);
+    setRobotImage(ROBOT_GIF); // Alterna para o gif principal
+    speakButton.disabled = true;
+    speakButton.innerText = "Robot is speaking...";
+    isSpeaking = true; // Indica que o robô está falando
+    resetStaticTimer(); // Reseta o timer de inatividade
+};
 
-    // Evento quando o sintetizador termina de falar
-    utterance.onend = () => {
-        setRobotImage(ROBOT_STATIC); // Retorna para a imagem estática
-        speakButton.disabled = false;
-        speakButton.innerText = "Press to Speak";
-        isSpeaking = false; // Indica que o robô parou de falar
-        startStaticImageTimer(); // Reinicia o timer de inatividade
-    };
+// Evento quando o sintetizador termina de falar
+utterance.onend = () => {
+    setRobotImage(ROBOT_STATIC); // Retorna para a imagem estática
+    speakButton.disabled = false;
+    speakButton.innerText = "Press to Speak";
+    isSpeaking = false; // Indica que o robô parou de falar
+    startStaticImageTimer(); // Reinicia o timer de inatividade
+};
 
     synth.speak(utterance);
 }
 
 // Chamando o evento para carregar vozes
 loadVoices();
+
+// Função para alterar a imagem do robô
+function setRobotImage(imagePath) {
+    robotImg.src = imagePath; // Atualiza o atributo src da imagem
+    console.log(`Robot image set to: ${imagePath}`); // Log para depuração
+}
 
         // Reconhecimento de voz
 function setupSpeechRecognition() {
