--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -55,6 +55,12 @@
         button {
             margin: 10px;
         }
+#robot-img {
+    position: relative;
+    z-index: 10; /* Certifique-se de que está acima de outros elementos */
+    visibility: visible; /* Garante que está visível */
+    opacity: 1; /* Garante que não está transparente */
+}
     </style>
 </head>
 <body>
