--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -201,8 +201,13 @@ loadVoices();
 
 // Função para alterar a imagem do robô
 function setRobotImage(imagePath) {
-    robotImg.src = imagePath; // Atualiza o atributo src da imagem
-    console.log(`Robot image set to: ${imagePath}`); // Log para depuração
+    robotImg.src = imagePath; // Atualiza o src
+    console.log(`Robot image set to: ${imagePath}`);
+    // Força o redesenho
+    robotImg.style.display = "none";
+    setTimeout(() => {
+        robotImg.style.display = "block";
+    }, 50);
 }
 
         // Reconhecimento de voz
