--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -203,7 +203,7 @@ loadVoices();
 function setRobotImage(imagePath) {
     robotImg.src = imagePath; // Atualiza o src
     console.log(`Robot image set to: ${imagePath}`);
-    // Força o redesenho
+    // Força o redesenho do navegador
     robotImg.style.display = "none";
     setTimeout(() => {
         robotImg.style.display = "block";
