--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -201,8 +201,15 @@ loadVoices();
 
 // Função para alterar a imagem do robô
 function setRobotImage(imagePath) {
+    console.log(`Changing robot image to: ${imagePath}`);
     robotImg.src = imagePath; // Atualiza o src
-    console.log(`Robot image set to: ${imagePath}`);
+    console.log(`New robot image src: ${robotImg.src}`);
+
+    // Adiciona evento para garantir que a imagem seja carregada
+    robotImg.onload = () => {
+        console.log(`Image successfully loaded: ${imagePath}`);
+    };
+
     // Força o redesenho do navegador
     robotImg.style.display = "none";
     setTimeout(() => {
