--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -57,9 +57,10 @@
         }
 #robot-img {
     position: relative;
-    z-index: 10; /* Certifique-se de que está acima de outros elementos */
+    z-index: 10; /* Sempre visível acima de outros elementos */
     visibility: visible; /* Garante que está visível */
-    opacity: 1; /* Garante que não está transparente */
+    opacity: 1; /* Garante que está 100% visível */
+    display: block; /* Evita que seja tratado como inline */
 }
     </style>
 </head>
