--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -193,13 +193,12 @@ loadVoices();
 
 // Modifique a função centralizada para gerenciar o timer
 function setRobotImage(imageSrc) {
-    if (robotImg.src !== imageSrc) {
-        robotImg.src = ""; // Força a reinicialização do GIF
+    if (!robotImg.src.includes(imageSrc)) { // Verifica se a imagem já não está definida
         robotImg.src = imageSrc;
 
-        // Zera a contagem se o robô estiver ativo (robo1.gif ou robo2.gif)
-        if (imageSrc === ROBOT_GIF) {
-            resetStaticTimer(); // Zera a contagem de inatividade
+        // Zera o temporizador de inatividade se a imagem ativa for um GIF
+        if (imageSrc === ROBOT_GIF || imageSrc === ROBOT_ALTERNATE) {
+            resetStaticTimer(); // Reinicia o temporizador
         }
     }
 }
@@ -215,15 +214,31 @@ function setupSpeechRecognition() {
     recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
     recognition.lang = "en-US";
 
-    recognition.onstart = () => {
+  recognition.onstart = () => {
+    console.log("Reconhecimento iniciado. Trocando para robo1.gif.");
     setRobotImage(ROBOT_GIF); // Troca para robo1.gif
     speakButton.classList.add("listening");
     speakButton.innerText = "Listening...";
 };
 
 recognition.onend = () => {
+    console.log("Reconhecimento finalizado. Voltando para robo1_static.png.");
     setRobotImage(ROBOT_STATIC); // Volta para a imagem estática
     speakButton.classList.remove("listening");
+    speakButton.innerText = "Press to Speak";
+};
+
+utterance.onstart = () => {
+    console.log("Síntese de fala iniciada. Trocando para robo1.gif.");
+    setRobotImage(ROBOT_GIF); // Troca para robo1.gif durante a fala
+    speakButton.disabled = true;
+    speakButton.innerText = "Robot is speaking...";
+};
+
+utterance.onend = () => {
+    console.log("Síntese de fala finalizada. Voltando para robo1_static.png.");
+    setRobotImage(ROBOT_STATIC); // Volta para a imagem estática após a fala
+    speakButton.disabled = false;
     speakButton.innerText = "Press to Speak";
 };
 
